--- a/views/error.ejs
+++ b/views/error.ejs
@@ -6,6 +6,7 @@
     <body>
         <%- include('./partials/header'); -%>     
         <div id="error" class="col-md-12 d-flex justify-content-center   ">
+            <!--Page affichée en cas d'erreur-->
             <p >Désolé cette page du site n'existe pas ! </p>
         </div>
         <%- include('./partials/menu'); -%>
