--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,4 @@
-
+<!-- Head de chaque pages html -->
 <title>Covoiturage</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,11 +18,11 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/css/mdb.min.css" rel="stylesheet">
 
 
-        <!--Style Pour les inputs de la date et l'heure-->
-        <!--<link href="stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">-->
-        <link href="stylesheets/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
-        <!--<link href="../stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">-->
-         <link href="../stylesheets/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+<!--Style Pour les inputs de la date et l'heure-->
+<!--<link href="stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">-->
+<link href="stylesheets/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+<!--<link href="../stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">-->
+<link href="../stylesheets/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
 <!--Style Pour les inputs de la date et l'heure-->
 <!--<link href="stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">-->
 <link href="stylesheets/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
@@ -32,15 +32,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
 
 
-
-
-
-
-        <!-- Relie la page html avec le style css correspondant -->
-        <link rel="stylesheet" href="stylesheets/style.css" />
-        <link href="stylesheets/recherche.css" rel="stylesheet" media="screen">
-         <link rel="stylesheet" href="../stylesheets/style.css" />
-         <link href="../stylesheets/recherche.css" rel="stylesheet" media="screen">
+<!-- Relie la page html avec le style css correspondant -->
+<link rel="stylesheet" href="stylesheets/style.css" />
+<link href="stylesheets/recherche.css" rel="stylesheet" media="screen">
+<link rel="stylesheet" href="../stylesheets/style.css" />
+<link href="../stylesheets/recherche.css" rel="stylesheet" media="screen">
 
 <!-- Relie la page html avec le style css correspondant -->
 <link rel="stylesheet" href="stylesheets/style.css" />
@@ -67,7 +63,4 @@
 <!--MDB 4.14-->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/js/mdb.min.js"></script>
 <!--MDB 4.14 icons-->
-<script type="module">
-//        import { mdbIcon } from '../node_modules/mdbvue';
-//        export default { components: { mdbIcon } }
-</script>
+
