--- a/views/partials/headerLogged.ejs
+++ b/views/partials/headerLogged.ejs
@@ -1,16 +1,15 @@
+<!-- header quand l'utilsateur est connecté-->
+<header class="col-md-12">
+    <div class="col-12 col-md-12 text-right row" id="deconnexion">
+        <a href="./logout" class=" offset-5 offset-md-3 col col-md"><p class="offset-md-6 col-md-6 menu_inscription">Déconnexion</p></a>
 
-        <header class="col-md-12">
-            <div class="col-12 col-md-12 text-right row" id="deconnexion">
-                <a href="./logout" class=" offset-5 offset-md-3 col col-md"><p class="offset-md-6 col-md-6 menu_inscription">Déconnexion</p></a>
+    </div>
+    <div  class="col-md-12 sol-sm-12 text-center" ><img src="img/Covoit1.png" alt="covoit"/></div>
 
-            </div>
-<!--            <div  class="col-md-12 sol-sm-12 text-center" ><h5>COVOIT'<em>Student</em></h5></div>-->
-            <div  class="col-md-12 sol-sm-12 text-center" ><img src="img/Covoit1.png" alt="covoit"/></div>
-
-        </header>
-        <!-- c'est ici que le contenu principal doit être placé -->
-        <div id="pageContent">
-            <!-- le bouton qui permet d'afficher le Menu -->
-            <button class="openbtn" id="btnOpen" onclick="showMenu()">&#9776;</button>
+</header>
+<!-- c'est ici que le contenu principal doit être placé -->
+<div id="pageContent">
+    <!-- le bouton qui permet d'afficher le Menu -->
+    <button class="openbtn" id="btnOpen" onclick="showMenu()">&#9776;</button>
 
 
